metatags, google analytics...

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contract Captain</title>
+  <title>Contract-Captain</title>
+  <meta name="title" content="Contract-Captain" />
+  <meta name="description" content="Smart contract administration tool for developers and moderators" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://contract-captain.com" />
+  <meta property="og:title" content="Contract-Captain" />
+  <meta property="og:description" content="Smart contract administration tool for developers and moderators" />
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://contract-captain.com" />
+  <meta property="twitter:title" content="Contract-Captain" />
+  <meta property="twitter:description" content="Smart contract administration tool for developers and moderators" />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
   <meta name='application-name' content="Contract Captain" />
   <meta name='apple-mobile-web-app-capable' content='yes' />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
