--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
   <meta property="og:url" content="https://contract-captain.com" />
   <meta property="og:title" content="Contract-Captain" />
   <meta property="og:description" content="Smart contract administration tool for developers and moderators" />
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="og:image" content="https://contract-captain.com/og-image.png" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://contract-captain.com" />
   <meta property="twitter:title" content="Contract-Captain" />
   <meta property="twitter:description" content="Smart contract administration tool for developers and moderators" />
-  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <meta property="twitter:image" content="https://contract-captain.com/og-image.png" />
   <meta name='application-name' content="Contract Captain" />
   <meta name='apple-mobile-web-app-capable' content='yes' />
   <meta name='apple-mobile-web-app-status-bar-style' content='default' />
